--- a/index.html
+++ b/index.html
@@ -7,149 +7,336 @@
     <meta name="description" content="Compassionate, trauma-informed private practice specializing in EMDR, Somatic Experiencing, IFS, and shadow work for healing complex trauma, PTSD, and childhood wounds.">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #00695C; /* Dark Teal */
+            --secondary-color: #B2DFDB; /* Light Teal */
+            --accent-color: #4DB6AC; /* Medium Teal */
+            --background-light: #F0F4F8; /* Light Grey Blue */
+            --background-white: #FFFFFF;
+            --text-dark: #2C3E50; /* Darker Blue-Grey */
+            --text-light: #ECEFF1; /* Very Light Grey */
+            --shadow-subtle: 0 4px 15px rgba(0,0,0,0.05);
+            --border-radius: 10px;
+        }
+
         body {
             margin: 0;
             font-family: 'Open Sans', sans-serif;
-            background-color: #F4F9FC;
-            color: #333;
-            line-height: 1.6;
+            background-color: var(--background-light);
+            color: var(--text-dark);
+            line-height: 1.7;
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
+
+        /* --- Header & Navigation --- */
         header {
-            background: linear-gradient(to bottom, #E0F7FA, #B2EBF2);
-            padding: 20px;
+            background: var(--background-white);
+            padding: 15px 20px;
             text-align: center;
             position: sticky;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: var(--shadow-subtle);
+            border-bottom: 1px solid var(--secondary-color);
         }
+
         nav ul {
             list-style: none;
             padding: 0;
+            margin: 0;
             display: flex;
             justify-content: center;
-            gap: 30px;
-            margin: 0;
+            gap: 35px;
+            flex-wrap: wrap;
         }
+
         nav a {
             text-decoration: none;
-            color: #00695C;
+            color: var(--primary-color);
             font-weight: 600;
-            font-size: 1.1em;
-            transition: color 0.3s;
+            font-size: 1.05em;
+            padding: 5px 0;
+            position: relative;
+            transition: color 0.3s ease-in-out;
         }
-        nav a:hover {
-            color: #004D40;
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            width: 0;
+            height: 2px;
+            background-color: var(--accent-color);
+            transition: width 0.3s ease-in-out;
         }
+
+        nav a:hover, nav a.active {
+            color: var(--accent-color);
+        }
+
+        nav a:hover::after, nav a.active::after {
+            width: 100%;
+        }
+
+        /* --- Hero Section --- */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1502082553048-f009c37129b9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1500&q=80') no-repeat center/cover;
-            height: 70vh;
+            background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url('https://images.unsplash.com/photo-1502082553048-f009c37129b9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1800&q=80') no-repeat center/cover;
+            min-height: 80vh; /* Fuller height */
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
-            color: white;
+            color: var(--text-light);
+            padding: 40px 20px; /* Add some padding */
         }
+
         .hero-content {
-            max-width: 900px;
-            padding: 20px;
+            max-width: 950px;
+            padding: 30px;
+            background-color: rgba(0,0,0,0.25); /* Slightly darker overlay for text readability */
+            border-radius: var(--border-radius);
+            backdrop-filter: blur(3px); /* Subtle blur for depth */
         }
+
         .hero h1 {
             font-family: 'Lora', serif;
-            font-size: 3.5em;
+            font-size: 4em;
             margin: 0 0 20px;
+            line-height: 1.1;
+            text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
         }
+
         .hero p {
-            font-size: 1.6em;
+            font-size: 1.7em;
             margin: 0;
+            font-weight: 300;
+            text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
         }
+
+        /* --- General Section Styling --- */
         section {
-            padding: 80px 20px;
+            padding: 100px 20px; /* More vertical padding */
             max-width: 1200px;
             margin: 0 auto;
         }
+
         h2 {
             font-family: 'Lora', serif;
-            color: #00695C;
+            color: var(--primary-color);
             text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 50px;
+            font-size: 3.2em;
+            margin-bottom: 60px;
+            position: relative;
+            padding-bottom: 15px;
         }
-        .about, .services, .approach {
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+
+        h2::after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 3px;
+            background-color: var(--accent-color);
+            border-radius: 5px;
+        }
+
+        .card {
+            background: var(--background-white);
+            border-radius: var(--border-radius);
+            box-shadow: var(--shadow-subtle);
             padding: 50px;
             margin-bottom: 60px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
+
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+        }
+
+        /* --- About Section --- */
         .about p {
-            font-size: 1.2em;
-            max-width: 800px;
-            margin: 0 auto 30px;
+            font-size: 1.15em;
+            max-width: 850px;
+            margin: 0 auto 25px;
+            text-align: center;
+            color: var(--text-dark);
         }
+
+        /* --- Services Section --- */
         .services ul {
             list-style: none;
             padding: 0;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 30px;
         }
+
         .services li {
-            background: #E0F7FA;
-            padding: 30px;
-            border-radius: 12px;
+            background: var(--secondary-color);
+            padding: 35px;
+            border-radius: var(--border-radius);
             text-align: center;
-            transition: transform 0.3s;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.05); /* Lighter shadow */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
+
         .services li:hover {
-            transform: translateY(-10px);
+            transform: translateY(-8px);
+            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
         }
+
         .services h3 {
-            color: #00695C;
+            color: var(--primary-color);
             margin-bottom: 15px;
+            font-size: 1.5em;
+            font-family: 'Lora', serif;
         }
+
+        .services p {
+            font-size: 1em;
+            color: var(--text-dark);
+        }
+
+        /* --- Approach Section --- */
+        .approach {
+            background: var(--background-white);
+            border-radius: var(--border-radius);
+            box-shadow: var(--shadow-subtle);
+            padding: 60px;
+            margin-bottom: 60px;
+            text-align: center;
+        }
+
+        .approach p {
+            font-size: 1.15em;
+            max-width: 900px;
+            margin: 0 auto 25px;
+            color: var(--text-dark);
+        }
+
+        /* --- Contact Section --- */
         .contact {
-            background: linear-gradient(to bottom, #B2EBF2, #E0F7FA);
-            border-radius: 15px;
-            padding: 50px;
+            background: linear-gradient(135deg, var(--secondary-color), var(--accent-color)); /* Gradient background */
+            border-radius: var(--border-radius);
+            padding: 70px 50px;
+            color: var(--background-white); /* White text for contrast */
         }
+        
+        .contact h2 {
+            color: var(--background-white);
+            margin-bottom: 40px;
+        }
+
+        .contact h2::after {
+            background-color: var(--background-white);
+        }
+
+        .contact p {
+            text-align: center;
+            font-size: 1.3em;
+            max-width: 800px;
+            margin: 0 auto 50px;
+            color: var(--text-light);
+            font-weight: 300;
+        }
+
         .contact form {
             display: grid;
-            gap: 20px;
+            gap: 25px;
             max-width: 700px;
             margin: 0 auto;
         }
+
         input, textarea {
             padding: 18px;
-            border: none;
-            border-radius: 8px;
+            border: 1px solid rgba(255,255,255,0.4);
+            border-radius: var(--border-radius);
             font-size: 1.1em;
-            background: white;
+            background: rgba(255,255,255,0.9); /* Slightly transparent white */
+            color: var(--text-dark);
+            transition: border-color 0.3s ease, background-color 0.3s ease;
         }
+
+        input::placeholder, textarea::placeholder {
+            color: #78909C; /* Soft grey placeholder */
+        }
+
+        input:focus, textarea:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            background-color: var(--background-white);
+            box-shadow: 0 0 0 3px rgba(0,105,92,0.2);
+        }
+        
         button {
-            background: #00695C;
-            color: white;
+            background: var(--primary-color);
+            color: var(--background-white);
             border: none;
             padding: 18px;
-            border-radius: 8px;
-            font-size: 1.2em;
+            border-radius: var(--border-radius);
+            font-size: 1.25em;
             cursor: pointer;
-            transition: background 0.3s;
+            transition: background 0.3s ease, transform 0.2s ease;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
+
         button:hover {
-            background: #004D40;
+            background: #004D40; /* Darker teal on hover */
+            transform: translateY(-2px);
         }
+
+        .contact .fine-print {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 0.95em;
+            color: var(--text-light);
+        }
+
+        /* --- Footer --- */
         footer {
-            background: #00695C;
-            color: white;
+            background: var(--primary-color);
+            color: var(--text-light);
             text-align: center;
             padding: 30px;
             font-size: 1em;
+            border-top: 5px solid var(--accent-color);
         }
+
+        /* --- Responsive Design --- */
+        @media (max-width: 992px) {
+            .hero h1 { font-size: 3.5em; }
+            .hero p { font-size: 1.5em; }
+            h2 { font-size: 2.8em; }
+            section { padding: 80px 20px; }
+            .card, .approach, .contact, .services li { padding: 40px; }
+        }
+
         @media (max-width: 768px) {
-            .hero h1 { font-size: 2.5em; }
-            .hero p { font-size: 1.3em; }
             nav ul { flex-direction: column; gap: 15px; }
+            .hero { min-height: 60vh; }
+            .hero h1 { font-size: 2.8em; }
+            .hero p { font-size: 1.3em; }
+            h2 { font-size: 2.3em; margin-bottom: 40px; }
+            .card, .approach, .contact, .services li { padding: 30px; }
+            .about p, .approach p, .contact p { font-size: 1.05em; }
+            .services ul { grid-template-columns: 1fr; } /* Stack services on small screens */
+            input, textarea, button { padding: 15px; font-size: 1em; }
+        }
+
+        @media (max-width: 480px) {
+            .hero h1 { font-size: 2.2em; }
+            .hero p { font-size: 1.1em; }
+            h2 { font-size: 1.8em; }
+            section { padding: 60px 15px; }
+            .card, .approach, .contact, .services li { padding: 25px; }
+            nav a { font-size: 0.95em; }
         }
     </style>
 </head>
@@ -157,7 +344,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#approach">Approach</a></li>
@@ -173,13 +360,13 @@
         </div>
     </section>
 
-    <section id="about" class="about">
+    <section id="about" class="card">
         <h2>About Me</h2>
         <p>I am a licensed therapist with extensive experience in trauma-informed care. Specializing in EMDR, somatic experiencing, Internal Family Systems (IFS), and gentle shadow work integration, I create a safe, nurturing space for adults healing from complex PTSD, childhood trauma, and relational wounds.</p>
         <p>My approach is rooted in empathy, neuroscience, and mindfulness, empowering you to process deep emotions, regulate your nervous system, and rediscover wholeness and resilience.</p>
     </section>
 
-    <section id="services" class="services">
+    <section id="services" class="card">
         <h2>Services Offered</h2>
         <ul>
             <li>
@@ -217,14 +404,14 @@
 
     <section id="contact" class="contact">
         <h2>Begin Your Healing Journey</h2>
-        <p style="text-align:center; font-size:1.2em; max-width:800px; margin:0 auto 40px;">Reach out for a free consultation. Your story matters, and a safer, more empowered life is possible.</p>
+        <p>Reach out for a free consultation. Your story matters, and a safer, more empowered life is possible.</p>
         <form action="mailto:your.email@example.com" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" rows="6" placeholder="Share a bit about what brings you here..." required></textarea>
             <button type="submit">Send Message</button>
         </form>
-        <p style="text-align:center; margin-top:30px; font-size:0.9em;">All inquiries are confidential.</p>
+        <p class="fine-print">All inquiries are confidential and will be responded to within 48 business hours.</p>
     </section>
 
     <footer>
@@ -232,13 +419,46 @@
     </footer>
 
     <script>
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
+        // Smooth scrolling for navigation links and active state
+        document.addEventListener('DOMContentLoaded', function() {
+            const navLinks = document.querySelectorAll('a[href^="#"]');
+            const sections = document.querySelectorAll('section');
+
+            navLinks.forEach(anchor => {
+                anchor.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    document.querySelector(this.getAttribute('href')).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+
+                    // Update active state
+                    navLinks.forEach(link => link.classList.remove('active'));
+                    this.classList.add('active');
                 });
+            });
+
+            // Intersection Observer for active navigation link on scroll
+            const observerOptions = {
+                root: null,
+                rootMargin: '0px',
+                threshold: 0.5 // Adjust this value as needed, 0.5 means 50% of the section is visible
+            };
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        navLinks.forEach(link => {
+                            link.classList.remove('active');
+                            if (link.getAttribute('href') === '#' + entry.target.id) {
+                                link.classList.add('active');
+                            }
+                        });
+                    }
+                });
+            }, observerOptions);
+
+            sections.forEach(section => {
+                observer.observe(section);
             });
         });
     </script>
